Changes in BUG ?.?:

New Features:

- Added number of cities to scoreboard (Q)

Improvements:

- Graphs (both BUG and Vanilla) now include a 'log scale' option

Bug Fixes:

-

FOR MODDERS

New Features:

-

Bug Fixes:

-



Changes in BUG 3.6:

New Features:

- Added map script "Maze" by Sirian
- Field of View slider on the main screen
- Improvements to stats tab on info screen
- Tick Marks for selected progress bars (tech, food, production)
- Tick Marks: Added whip threshold indicator to city production bar (look for yellow center tick mark)
- Added FoodAssist: net food added to stores per turn and turns until starvation
- Added EventSigns: plots whose yields change due to random events marked on the map with signs
- Added BUG Finance Advisor with detailed line items for Commerce and Income
- Added Min/Max Commerce Rate buttons: set any commerce rate to 0% or 100% with one click
- Added Gold Rate Warning: yellow gold rate when negative but not enough to go below zero
- Added Strategy Overlay: create a multicolored in-game dot map
- Log the current turn slider values (gold, science, culture, espionage)

Improvements:

- Customizable Domestic Advisor (CDA) now also resizable based on 2 new BUG options
- CDA: Added a "whip anger" column to CDA (not added to any pages)
- CDA: coloring options now allow reversed comparisons (i.e. higher numbers are worse)
- Show attitudes in leaderhead hovers in Exotic Foreign Advisor (EFA) Info tab and Military Advisor (MA)
- EFA Info tab: Added Domestic Trade total and correct detection of possibility of trade routes
- EFA Info tab: Added second trade column (for number of trade routes) to EFA Info Tab
- Advanced Scoreboard: option to show Civ ID number; layout character is "I" but it's not in the default layout
- Advanced Scoreboard: option to show the rank of a Civ; layout character is "K"
- Advanced Scoreboard: options for maximum players, line height, and research icon size